crates/codegen/tests/snapshots/codegen_snapshots__rust_generation_multiple_models.snap
---
source: crates/codegen/tests/codegen_snapshots.rs
expression: result.code
---
//! Generated by ForgeDB
//! DO NOT EDIT - This file is auto-generated
#![allow(dead_code, unused_imports)]
use std::collections::HashMap;
use std::path::{Path, PathBuf};
use forgedb_storage::{ColumnarStorage, FixedColumn, VariableColumn, Tombstones};
use forgedb_types::{Uuid, Timestamp, Value};
use serde::{Deserialize, Serialize};
use utoipa::ToSchema;
///User model
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct User {
    pub id: Uuid,
}
///Storage for User model
pub struct UserStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl UserStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            tombstones: forgedb_storage::Tombstones::new(PathBuf::from("tombstones.bin"))
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: User) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col.append_uuid(record.id).expect("Failed to append to column");
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<User> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = self
            .id_col
            .read_uuid(row_index)
            .expect("Failed to read from column");
        Some(User { id: id_value })
    }
}
///Post model
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct Post {
    pub id: Uuid,
    pub title: String,
}
///Storage for Post model
pub struct PostStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    title_col: VariableColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl PostStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            title_col: VariableColumn::new(
                    PathBuf::from("variable/string_data_1.bin"),
                    PathBuf::from("variable/string_offsets_1.bin"),
                )
                .expect("Failed to create variable column"),
            tombstones: forgedb_storage::Tombstones::new(PathBuf::from("tombstones.bin"))
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: Post) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col.append_uuid(record.id).expect("Failed to append to column");
        self.title_col.append_string(&record.title).expect("Failed to append string");
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<Post> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = self
            .id_col
            .read_uuid(row_index)
            .expect("Failed to read from column");
        let title_value = self
            .title_col
            .read_string(row_index)
            .expect("Failed to read string");
        Some(Post {
            id: id_value,
            title: title_value,
        })
    }
}
/// Main database struct
pub struct Database {
    pub user: UserStorage,
    pub post: PostStorage,
}
impl Database {
    pub fn new() -> Self {
        Self {
            user: UserStorage::new(),
            post: PostStorage::new(),
        }
    }
}
