crates/codegen/tests/snapshots/codegen_snapshots__rust_generation_relation_traversal.snap
---
source: crates/codegen/tests/codegen_snapshots.rs
expression: code
---
//! Generated by ForgeDB
//! DO NOT EDIT - This file is auto-generated
#![allow(dead_code, unused_imports)]
use std::collections::HashMap;
use std::path::{Path, PathBuf};
use forgedb_storage::{FixedColumn, VariableColumn, Tombstones};
use forgedb_types::{Uuid, Timestamp, Value};
use serde::{Deserialize, Serialize};
use utoipa::ToSchema;
///User model
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct User {
    pub id: Uuid,
    pub name: String,
    pub posts: (),
}
///Storage for User model
pub struct UserStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    name_col: VariableColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl UserStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("user/fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            name_col: VariableColumn::new(
                    PathBuf::from("user/variable/string_data_1.bin"),
                    PathBuf::from("user/variable/string_offsets_1.bin"),
                )
                .expect("Failed to create variable column"),
            tombstones: forgedb_storage::Tombstones::new(
                    PathBuf::from("user/tombstones.bin"),
                )
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: User) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col
            .append_uuid(*record.id.as_bytes())
            .expect("Failed to append to column");
        self.name_col.append_string(&record.name).expect("Failed to append string");
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<User> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = {
            let bytes = self
                .id_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        let name_value = self
            .name_col
            .read_string(row_index)
            .expect("Failed to read string");
        Some(User {
            id: id_value,
            name: name_value,
            posts: (),
        })
    }
    /// Return every live (non-deleted) record.  Used by generated
    /// reverse-relation traversal helpers, which filter this by a
    /// foreign key.  Order is unspecified (follows the id map).
    pub fn all(&self) -> Vec<User> {
        let mut records = Vec::new();
        for id in self.id_to_row.keys() {
            if let Some(record) = self.get(*id) {
                records.push(record);
            }
        }
        records
    }
}
///Post model
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct Post {
    pub id: Uuid,
    pub title: String,
    pub author: Uuid,
    pub editor: Option<Uuid>,
    pub tags: (),
}
///Storage for Post model
pub struct PostStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    title_col: VariableColumn,
    author_col: FixedColumn,
    editor_col: FixedColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl PostStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("post/fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            title_col: VariableColumn::new(
                    PathBuf::from("post/variable/string_data_1.bin"),
                    PathBuf::from("post/variable/string_offsets_1.bin"),
                )
                .expect("Failed to create variable column"),
            author_col: FixedColumn::new(PathBuf::from("post/fixed/uuid_2.bin"), 16usize)
                .expect("Failed to create fixed column"),
            editor_col: FixedColumn::new(
                    PathBuf::from("post/fixed/uuid_3.bin"),
                    std::mem::size_of::<Option<Uuid>>(),
                )
                .expect("Failed to create fixed column"),
            tombstones: forgedb_storage::Tombstones::new(
                    PathBuf::from("post/tombstones.bin"),
                )
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: Post) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col
            .append_uuid(*record.id.as_bytes())
            .expect("Failed to append to column");
        self.title_col.append_string(&record.title).expect("Failed to append string");
        self.author_col
            .append_uuid(*record.author.as_bytes())
            .expect("Failed to append to column");
        {
            let bytes = unsafe {
                std::slice::from_raw_parts(
                    &record.editor as *const _ as *const u8,
                    std::mem::size_of_val(&record.editor),
                )
            };
            self.editor_col.append_bytes(bytes).expect("Failed to append to column");
        }
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<Post> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = {
            let bytes = self
                .id_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        let title_value = self
            .title_col
            .read_string(row_index)
            .expect("Failed to read string");
        let author_value = {
            let bytes = self
                .author_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        let editor_value: Option<Uuid> = {
            let bytes = self
                .editor_col
                .read_bytes(row_index)
                .expect("Failed to read from column");
            unsafe { std::ptr::read_unaligned(bytes.as_ptr() as *const Option<Uuid>) }
        };
        Some(Post {
            id: id_value,
            title: title_value,
            author: author_value,
            editor: editor_value,
            tags: (),
        })
    }
    /// Return every live (non-deleted) record.  Used by generated
    /// reverse-relation traversal helpers, which filter this by a
    /// foreign key.  Order is unspecified (follows the id map).
    pub fn all(&self) -> Vec<Post> {
        let mut records = Vec::new();
        for id in self.id_to_row.keys() {
            if let Some(record) = self.get(*id) {
                records.push(record);
            }
        }
        records
    }
}
///Tag model
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct Tag {
    pub id: Uuid,
    pub label: String,
    pub posts: (),
}
///Storage for Tag model
pub struct TagStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    label_col: VariableColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl TagStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("tag/fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            label_col: VariableColumn::new(
                    PathBuf::from("tag/variable/string_data_1.bin"),
                    PathBuf::from("tag/variable/string_offsets_1.bin"),
                )
                .expect("Failed to create variable column"),
            tombstones: forgedb_storage::Tombstones::new(
                    PathBuf::from("tag/tombstones.bin"),
                )
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: Tag) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col
            .append_uuid(*record.id.as_bytes())
            .expect("Failed to append to column");
        self.label_col.append_string(&record.label).expect("Failed to append string");
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<Tag> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = {
            let bytes = self
                .id_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        let label_value = self
            .label_col
            .read_string(row_index)
            .expect("Failed to read string");
        Some(Tag {
            id: id_value,
            label: label_value,
            posts: (),
        })
    }
    /// Return every live (non-deleted) record.  Used by generated
    /// reverse-relation traversal helpers, which filter this by a
    /// foreign key.  Order is unspecified (follows the id map).
    pub fn all(&self) -> Vec<Tag> {
        let mut records = Vec::new();
        for id in self.id_to_row.keys() {
            if let Some(record) = self.get(*id) {
                records.push(record);
            }
        }
        records
    }
}
///Junction table for the Post.tags <-> Tag.posts many-to-many relation
pub struct PostTagLink {
    left_col: FixedColumn,
    right_col: FixedColumn,
    row_count: usize,
}
impl PostTagLink {
    pub fn new() -> Self {
        Self {
            left_col: FixedColumn::new(
                    PathBuf::from("post_tag_link/fixed/left.bin"),
                    16usize,
                )
                .expect("Failed to create junction column"),
            right_col: FixedColumn::new(
                    PathBuf::from("post_tag_link/fixed/right.bin"),
                    16usize,
                )
                .expect("Failed to create junction column"),
            row_count: 0,
        }
    }
    /// Record a link between a `left` (model1) id and a `right`
    /// (model2) id.
    pub fn link(&mut self, left: Uuid, right: Uuid) {
        self.left_col.append_uuid(*left.as_bytes()).expect("Failed to append link");
        self.right_col.append_uuid(*right.as_bytes()).expect("Failed to append link");
        self.row_count += 1;
    }
    /// Every recorded (left, right) id pair.
    pub fn pairs(&self) -> Vec<(Uuid, Uuid)> {
        (0..self.row_count)
            .map(|i| {
                let left = Uuid::from_bytes(
                    self.left_col.read_uuid(i).expect("Failed to read link"),
                );
                let right = Uuid::from_bytes(
                    self.right_col.read_uuid(i).expect("Failed to read link"),
                );
                (left, right)
            })
            .collect()
    }
}
/// Main database struct
pub struct Database {
    pub user: UserStorage,
    pub post: PostStorage,
    pub tag: TagStorage,
    pub post_tag_link: PostTagLink,
}
impl Database {
    pub fn new() -> Self {
        Self {
            user: UserStorage::new(),
            post: PostStorage::new(),
            tag: TagStorage::new(),
            post_tag_link: PostTagLink::new(),
        }
    }
}
impl Database {
    ///Resolve the foreign key to its record.
    pub fn post_author(&self, record: &Post) -> Option<User> {
        self.user.get(record.author)
    }
    ///Resolve the optional foreign key to its record.
    pub fn post_editor(&self, record: &Post) -> Option<User> {
        record.editor.and_then(|fk| self.user.get(fk))
    }
    ///All Post whose author references the given id.
    pub fn user_posts_by_author(&self, id: Uuid) -> Vec<Post> {
        self.post.all().into_iter().filter(|record| record.author == id).collect()
    }
    ///All Post whose editor references the given id.
    pub fn user_posts_by_editor(&self, id: Uuid) -> Vec<Post> {
        self.post.all().into_iter().filter(|record| record.editor == Some(id)).collect()
    }
    ///Link a Post (left) and a Tag (right) in the junction table.
    pub fn link_post_tag(&mut self, left: Uuid, right: Uuid) {
        self.post_tag_link.link(left, right);
    }
    ///All linked Tag for the given Post id.
    pub fn post_tags(&self, id: Uuid) -> Vec<Tag> {
        self.post_tag_link
            .pairs()
            .into_iter()
            .filter(|(left, _)| *left == id)
            .filter_map(|(_, right)| self.tag.get(right))
            .collect()
    }
    ///All linked Post for the given Tag id.
    pub fn tag_posts(&self, id: Uuid) -> Vec<Post> {
        self.post_tag_link
            .pairs()
            .into_iter()
            .filter(|(_, right)| *right == id)
            .filter_map(|(left, _)| self.post.get(left))
            .collect()
    }
}
///Post with its forward references resolved
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct PostWithRelations {
    pub post: Post,
    pub author: Option<User>,
    pub editor: Option<User>,
}
impl Database {
    ///Load a record together with its forward references.
    pub fn post_with_relations(&self, id: Uuid) -> Option<PostWithRelations> {
        let post = self.post.get(id)?;
        let author = self.user.get(post.author);
        let editor = post.editor.and_then(|fk| self.user.get(fk));
        Some(PostWithRelations {
            post,
            author,
            editor,
        })
    }
}
