crates/codegen/tests/snapshots/codegen_snapshots__rust_generation_with_component_field.snap
---
source: crates/codegen/tests/codegen_snapshots.rs
expression: code
---
//! Generated by ForgeDB
//! DO NOT EDIT - This file is auto-generated
#![allow(dead_code, unused_imports)]
use std::collections::HashMap;
use std::path::{Path, PathBuf};
use forgedb_storage::{FixedColumn, VariableColumn, Tombstones};
use forgedb_types::{Uuid, Timestamp, Value};
use serde::{Deserialize, Serialize};
use utoipa::ToSchema;
///Product model
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct Product {
    pub id: Uuid,
    pub name: String,
    pub reviews: (),
    pub card: String,
}
///Storage for Product model
pub struct ProductStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    name_col: VariableColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl ProductStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("product/fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            name_col: VariableColumn::new(
                    PathBuf::from("product/variable/string_data_1.bin"),
                    PathBuf::from("product/variable/string_offsets_1.bin"),
                )
                .expect("Failed to create variable column"),
            tombstones: forgedb_storage::Tombstones::new(
                    PathBuf::from("product/tombstones.bin"),
                )
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: Product) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col
            .append_uuid(*record.id.as_bytes())
            .expect("Failed to append to column");
        self.name_col.append_string(&record.name).expect("Failed to append string");
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<Product> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = {
            let bytes = self
                .id_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        let name_value = self
            .name_col
            .read_string(row_index)
            .expect("Failed to read string");
        Some(Product {
            id: id_value,
            name: name_value,
            reviews: (),
            card: Default::default(),
        })
    }
}
/// Main database struct
pub struct Database {
    pub product: ProductStorage,
}
impl Database {
    pub fn new() -> Self {
        Self {
            product: ProductStorage::new(),
        }
    }
}
