crates/codegen/tests/snapshots/codegen_snapshots__rust_generation_with_fk_fields.snap
---
source: crates/codegen/tests/codegen_snapshots.rs
expression: code
---
//! Generated by ForgeDB
//! DO NOT EDIT - This file is auto-generated
#![allow(dead_code, unused_imports)]
use std::collections::HashMap;
use std::path::{Path, PathBuf};
use forgedb_storage::{FixedColumn, VariableColumn, Tombstones};
use forgedb_types::{Uuid, Timestamp, Value};
use serde::{Deserialize, Serialize};
use utoipa::ToSchema;
///Author model
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct Author {
    pub id: Uuid,
}
///Storage for Author model
pub struct AuthorStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl AuthorStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("author/fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            tombstones: forgedb_storage::Tombstones::new(
                    PathBuf::from("author/tombstones.bin"),
                )
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: Author) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col
            .append_uuid(*record.id.as_bytes())
            .expect("Failed to append to column");
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<Author> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = {
            let bytes = self
                .id_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        Some(Author { id: id_value })
    }
    /// Return every live (non-deleted) record.  Used by generated
    /// reverse-relation traversal helpers, which filter this by a
    /// foreign key.  Order is unspecified (follows the id map).
    pub fn all(&self) -> Vec<Author> {
        let mut records = Vec::new();
        for id in self.id_to_row.keys() {
            if let Some(record) = self.get(*id) {
                records.push(record);
            }
        }
        records
    }
}
///Post model
#[repr(C)]
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct Post {
    pub id: Uuid,
    pub title: String,
    pub author_id: Uuid,
    pub editor_id: Option<Uuid>,
}
///Storage for Post model
pub struct PostStorage {
    id_to_row: HashMap<Uuid, usize>,
    row_count: usize,
    id_col: FixedColumn,
    title_col: VariableColumn,
    author_id_col: FixedColumn,
    editor_id_col: FixedColumn,
    tombstones: forgedb_storage::Tombstones,
}
impl PostStorage {
    pub fn new() -> Self {
        Self {
            id_to_row: HashMap::new(),
            row_count: 0,
            id_col: FixedColumn::new(PathBuf::from("post/fixed/uuid_0.bin"), 16usize)
                .expect("Failed to create fixed column"),
            title_col: VariableColumn::new(
                    PathBuf::from("post/variable/string_data_1.bin"),
                    PathBuf::from("post/variable/string_offsets_1.bin"),
                )
                .expect("Failed to create variable column"),
            author_id_col: FixedColumn::new(
                    PathBuf::from("post/fixed/uuid_2.bin"),
                    16usize,
                )
                .expect("Failed to create fixed column"),
            editor_id_col: FixedColumn::new(
                    PathBuf::from("post/fixed/uuid_3.bin"),
                    std::mem::size_of::<Option<Uuid>>(),
                )
                .expect("Failed to create fixed column"),
            tombstones: forgedb_storage::Tombstones::new(
                    PathBuf::from("post/tombstones.bin"),
                )
                .expect("Failed to create tombstones"),
        }
    }
    pub fn insert(&mut self, record: Post) -> Uuid {
        let row_index = self.row_count;
        let id = record.id;
        self.id_col
            .append_uuid(*record.id.as_bytes())
            .expect("Failed to append to column");
        self.title_col.append_string(&record.title).expect("Failed to append string");
        self.author_id_col
            .append_uuid(*record.author_id.as_bytes())
            .expect("Failed to append to column");
        {
            let bytes = unsafe {
                std::slice::from_raw_parts(
                    &record.editor_id as *const _ as *const u8,
                    std::mem::size_of_val(&record.editor_id),
                )
            };
            self.editor_id_col.append_bytes(bytes).expect("Failed to append to column");
        }
        self.tombstones.append(false).expect("Failed to append tombstone");
        self.id_to_row.insert(id, row_index);
        self.row_count += 1;
        id
    }
    pub fn get(&self, id: Uuid) -> Option<Post> {
        let row_index = *self.id_to_row.get(&id)?;
        if self.tombstones.is_deleted(row_index).unwrap_or(true) {
            return None;
        }
        let id_value = {
            let bytes = self
                .id_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        let title_value = self
            .title_col
            .read_string(row_index)
            .expect("Failed to read string");
        let author_id_value = {
            let bytes = self
                .author_id_col
                .read_uuid(row_index)
                .expect("Failed to read from column");
            Uuid::from_bytes(bytes)
        };
        let editor_id_value: Option<Uuid> = {
            let bytes = self
                .editor_id_col
                .read_bytes(row_index)
                .expect("Failed to read from column");
            unsafe { std::ptr::read_unaligned(bytes.as_ptr() as *const Option<Uuid>) }
        };
        Some(Post {
            id: id_value,
            title: title_value,
            author_id: author_id_value,
            editor_id: editor_id_value,
        })
    }
    /// Return every live (non-deleted) record.  Used by generated
    /// reverse-relation traversal helpers, which filter this by a
    /// foreign key.  Order is unspecified (follows the id map).
    pub fn all(&self) -> Vec<Post> {
        let mut records = Vec::new();
        for id in self.id_to_row.keys() {
            if let Some(record) = self.get(*id) {
                records.push(record);
            }
        }
        records
    }
}
/// Main database struct
pub struct Database {
    pub author: AuthorStorage,
    pub post: PostStorage,
}
impl Database {
    pub fn new() -> Self {
        Self {
            author: AuthorStorage::new(),
            post: PostStorage::new(),
        }
    }
}
impl Database {
    ///Resolve the foreign key to its record.
    pub fn post_author_id(&self, record: &Post) -> Option<Author> {
        self.author.get(record.author_id)
    }
    ///Resolve the optional foreign key to its record.
    pub fn post_editor_id(&self, record: &Post) -> Option<Author> {
        record.editor_id.and_then(|fk| self.author.get(fk))
    }
}
///Post with its forward references resolved
#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
pub struct PostWithRelations {
    pub post: Post,
    pub author: Option<Author>,
    pub editor: Option<Author>,
}
impl Database {
    ///Load a record together with its forward references.
    pub fn post_with_relations(&self, id: Uuid) -> Option<PostWithRelations> {
        let post = self.post.get(id)?;
        let author = self.author.get(post.author_id);
        let editor = post.editor_id.and_then(|fk| self.author.get(fk));
        Some(PostWithRelations {
            post,
            author,
            editor,
        })
    }
}
